# renderapp

./: pyproject.toml
mysite/: settings.py
render/: views.py
render/templates/render/: index.html
