[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["tmsasaki <tmsski@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.0.0"
whitenoise = {extras = ["brotli"], version = "^6.0.0"}
gunicorn = "^20.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
